# aminer-daily-paper

./: .gitignore  README.md  README.zh.md  SKILL.md  SKILL_zh.md  config.example.yaml  pyproject.toml  requirements.txt  setup.py
aminer_rec/: __init__.py  cli.py
schemas/: recommend_and_dispatch.request.schema.json  recommend_and_dispatch.response.schema.json
scripts/: __init__.py  aminer_paper_search.py  aminer_person_search.py  aminer_schema.py  arxiv_search.py  build_user_profile.py  common.py  constants.py  datacenter_client.py  dispatch_feishu_messages.py  enrich_with_aminer.py  feishu_cards.py  handle_trigger.py  internal_profile_provider.py  llm_client.py  openclaw_stub.py  recommend.py  render_feishu_messages.py  research_profile.py  run_pipeline.py  summarize_papers.py
tests/: test_aminer_paper_search.py  test_aminer_person_search.py  test_arxiv_search.py  test_build_user_profile.py  test_dispatch_feishu_messages.py  test_enrich_with_aminer.py  test_feishu_cards.py  test_handle_trigger.py  test_internal_profile_provider.py  test_research_profile.py  test_run_pipeline.py
