[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aminer-rec"
version = "0.1.0"
description = "AMiner-powered personalized paper recommendation pipeline."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "tly", email = "liyan.tie@aminer.cn" }
]
dependencies = [
  "openai>=1.30.0",
  "PyYAML>=6.0",
]

[project.scripts]
aminer-rec = "aminer_rec.cli:main"

[tool.setuptools.packages.find]
include = ["aminer_rec*", "scripts*"]
